--- a/nodesnim/nodes2d/node2d.html
+++ b/nodesnim/nodes2d/node2d.html
@@ -111,7 +111,9 @@ function main() {
   centered*: bool
   rotation*: float
   scale*: Vector2Ref
-  timed_position*: Vector2Ref"><wbr />Node2DObj<span class="attachedType"></span></a></li>
+  timed_position*: Vector2Ref
+  relative_z_index*: bool
+  z_index*, z_index_global*: float"><wbr />Node2DObj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#Node2DRef"
     title="Node2DRef = ref Node2DObj"><wbr />Node2DRef<span class="attachedType"></span></a></li>
 
@@ -128,7 +130,9 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#14" id="64">Methods</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#draw.e%2CNode2DRef%2CGLfloat%2CGLfloat"
+      <li><a class="reference" href="#calcGlobalPosition.e%2CNode2DRef"
+    title="calcGlobalPosition(self: Node2DRef)"><wbr />calc<wbr />Global<wbr />Position<span class="attachedType">Node2DRef</span></a></li>
+  <li><a class="reference" href="#draw.e%2CNode2DRef%2CGLfloat%2CGLfloat"
     title="draw(self: Node2DRef; w, h: GLfloat)"><wbr />draw<span class="attachedType">Node2DRef</span></a></li>
   <li><a class="reference" href="#move.e%2CNode2DRef%2Cfloat%2Cfloat"
     title="move(self: Node2DRef; x, y: float)"><wbr />move<span class="attachedType">Node2DRef</span></a></li>
@@ -173,6 +177,8 @@ function main() {
   <span class="Identifier">rotation</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">float</span>
   <span class="Identifier">scale</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a>
   <span class="Identifier">timed_position</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a>
+  <span class="Identifier">relative_z_index</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
+  <span class="Identifier">z_index</span><span class="Operator">*</span><span class="Other">,</span> <span class="Identifier">z_index_global</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">float</span>
 </pre></dt>
 <dd>
 
@@ -209,6 +215,13 @@ function main() {
 <div class="section" id="14">
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
+<a id="calcGlobalPosition.e,Node2DRef"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#calcGlobalPosition.e%2CNode2DRef"><span class="Identifier">calcGlobalPosition</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="node2d.html#Node2DRef"><span class="Identifier">Node2DRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Returns global node position.
+
+</dd>
 <a id="draw.e,Node2DRef,GLfloat,GLfloat"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CNode2DRef%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="node2d.html#Node2DRef"><span class="Identifier">Node2DRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -274,7 +287,7 @@ Changes Z index.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-08-30 12:59:32 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-08-30 14:35:58 UTC</small>
       </div>
     </div>
   </div>
