--- a/nodesnim/nodes3d/node3d.html
+++ b/nodesnim/nodes3d/node3d.html
@@ -226,7 +226,7 @@ function main() {
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
 <a id="calcGlobalPosition3.e,Node3DRef"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#calcGlobalPosition3.e%2CNode3DRef"><span class="Identifier">calcGlobalPosition3</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="node3d.html#Node3DRef"><span class="Identifier">Node3DRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">method</span> <a href="#calcGlobalPosition3.e%2CNode3DRef"><span class="Identifier">calcGlobalPosition3</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="node3d.html#Node3DRef"><span class="Identifier">Node3DRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -359,7 +359,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-08-30 14:36:09 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-08-31 09:04:37 UTC</small>
       </div>
     </div>
   </div>
