--- a/nodesnim/core/vector2.html
+++ b/nodesnim/core/vector2.html
@@ -115,6 +115,8 @@ function main() {
     title="Vector2(x, y: float): Vector2Ref"><wbr />Vector2<span class="attachedType">Vector2Ref</span></a></li>
   <li><a class="reference" href="#Vector2%2CVector2Ref"
     title="Vector2(b: Vector2Ref): Vector2Ref"><wbr />Vector2<span class="attachedType">Vector2Ref</span></a></li>
+  <li><a class="reference" href="#Vector2%2Cfloat"
+    title="Vector2(num: float): Vector2Ref"><wbr />Vector2<span class="attachedType">Vector2Ref</span></a></li>
   <li><a class="reference" href="#Vector2"
     title="Vector2(): Vector2Ref"><wbr />Vector2<span class="attachedType">Vector2Ref</span></a></li>
   <li><a class="reference" href="#abs%2CVector2Ref"
@@ -235,6 +237,13 @@ function main() {
 </dd>
 <a id="Vector2,Vector2Ref"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#Vector2%2CVector2Ref"><span class="Identifier">Vector2</span></a><span class="Other">(</span><span class="Identifier">b</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
+<a id="Vector2,float"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Vector2%2Cfloat"><span class="Identifier">Vector2</span></a><span class="Other">(</span><span class="Identifier">num</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -516,7 +525,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-08-31 16:10:02 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-02 11:37:52 UTC</small>
       </div>
     </div>
   </div>
