--- a/nodesnim/nodes/node.html
+++ b/nodesnim/nodes/node.html
@@ -180,6 +180,8 @@ function main() {
     title="hasParent(self: NodeRef): bool"><wbr />has<wbr />Parent<span class="attachedType">NodeRef</span></a></li>
   <li><a class="reference" href="#hide.e%2CNodeRef"
     title="hide(self: NodeRef)"><wbr />hide<span class="attachedType">NodeRef</span></a></li>
+  <li><a class="reference" href="#rename.e%2CNodeRef%2Cstring"
+    title="rename(self: NodeRef; new_name: string)"><wbr />rename<span class="attachedType">NodeRef</span></a></li>
   <li><a class="reference" href="#removeChild.e%2CNodeRef%2Cint"
     title="removeChild(self: NodeRef; index: int)"><wbr />remove<wbr />Child<span class="attachedType">NodeRef</span></a></li>
   <li><a class="reference" href="#removeChild.e%2CNodeRef%2CNodeRef"
@@ -437,6 +439,13 @@ Returns true, when node has parent.
 
 
 </dd>
+<a id="rename.e,NodeRef,string"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#rename.e%2CNodeRef%2Cstring"><span class="Identifier">rename</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="node.html#NodeRef"><span class="Identifier">NodeRef</span></a><span class="Other">;</span> <span class="Identifier">new_name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="removeChild.e,NodeRef,int"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#removeChild.e%2CNodeRef%2Cint"><span class="Identifier">removeChild</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="node.html#NodeRef"><span class="Identifier">NodeRef</span></a><span class="Other">;</span> <span class="Identifier">index</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -522,7 +531,7 @@ This used in childs of the NodeObj.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-08-31 16:10:02 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-02 11:37:52 UTC</small>
       </div>
     </div>
   </div>
