--- a/nodesnim/nodes/animation_player.html
+++ b/nodesnim/nodes/animation_player.html
@@ -106,7 +106,10 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#AnimationObject"
+      <li><a class="reference" href="#AnimationMode"
+    title="AnimationMode {.pure, size: 1.} = enum
+  ANIMATION_NORMAL, ANIMATION_EASE"><wbr />Animation<wbr />Mode<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#AnimationObject"
     title="AnimationObject = object
   states: seq[tuple[tick: int, value: float]]
   obj: ptr float"><wbr />Animation<wbr />Object<span class="attachedType"></span></a></li>
@@ -116,7 +119,8 @@ function main() {
   duration*: int64
   tick*: int64
   is_played*: bool
-  loop*: bool"><wbr />Animation<wbr />Player<wbr />Obj<span class="attachedType"></span></a></li>
+  loop*: bool
+  mode*: AnimationMode"><wbr />Animation<wbr />Player<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#AnimationPlayerRef"
     title="AnimationPlayerRef = ref AnimationPlayerObj"><wbr />Animation<wbr />Player<wbr />Ref<span class="attachedType"></span></a></li>
 
@@ -163,6 +167,14 @@ function main() {
 <div class="section" id="7">
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
+<a id="AnimationMode"></a>
+<dt><pre><a href="animation_player.html#AnimationMode"><span class="Identifier">AnimationMode</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">pure</span><span class="Other">,</span> <span class="Identifier">size</span><span class="Other">:</span> <span class="DecNumber">1</span></span><span class="Other">.}</span></span> <span class="Other">=</span> <span class="Keyword">enum</span>
+  <span class="Identifier">ANIMATION_NORMAL</span><span class="Other">,</span> <span class="Identifier">ANIMATION_EASE</span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="AnimationObject"></a>
 <dt><pre><a href="animation_player.html#AnimationObject"><span class="Identifier">AnimationObject</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
   <span class="Identifier">states</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Keyword">tuple</span><span class="Other">[</span><span class="Identifier">tick</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">,</span> <span class="Identifier">value</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">]</span><span class="Other">]</span>
@@ -180,6 +192,7 @@ function main() {
   <span class="Identifier">tick</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">int64</span>
   <span class="Identifier">is_played</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
   <span class="Identifier">loop</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
+  <span class="Identifier">mode</span><span class="Operator">*</span><span class="Other">:</span> <a href="animation_player.html#AnimationMode"><span class="Identifier">AnimationMode</span></a>
 </pre></dt>
 <dd>
 
@@ -259,7 +272,7 @@ Stops animation.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-02 11:38:01 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-02 13:29:31 UTC</small>
       </div>
     </div>
   </div>
